--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage("test") {
             steps {
                 sh """
-		    docker run --entrypoint "cd app && behave && cd .."
+		    docker run --entrypoint "cd src/app && behave && cd .."
                 """
             }
         }
