entire repository is mapped onto /tmp/rep - not just app  (was /app/.git ?)

--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -7,5 +7,5 @@ services:
         - "8080:8080"
       #user: "jenkins:jenkins"  
       volumes:
-        - "../app/.git:/tmp/rep"
+        - "..:/tmp/rep"
         - "/var/run/docker.sock:/var/run/docker.sock"
